# iComplete-backend

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
iComplete/: asgi.py  settings.py  urls.py  wsgi.py
polls/: models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py  0002_habit.py  0002_task_completed_task_date_task_description_and_more.py
